# MCP-Essentials

./: .gitignore  README.md  main.py  pyproject.toml
src/clients/bmi_client/: client.py
src/clients/opencv_client/: client.py
src/servers/bmi_server/: server.py
src/servers/hello_world_server/: server.py  utils.py
src/servers/opencv_server/: server.py
src/shared/: utils.py
